--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script>
-    const CSV_URL = "YOUR_PUBLISHED_CSV_URL"; // <-- paste your published CSV link here
+    const CSV_URL = "https://docs.google.com/spreadsheets/d/e/2PACX-1vQERkbRqvUyktHeUw-DvLVNNIzvR50N0oHC-bpDwx6Lj33-o9uIiGN-ucd9r80Tq3l5_WroECTpI-gz/pub?gid=262595972&single=true&output=csv"; // <-- paste your published CSV link here
     const TARGET = 0.95; // 95%
     const DAILY_PRACTICES = new Set(["Bible Reading","Morning Intimacy","Midnight Intercessory Prayer"]);
 
