--- a/index.html
+++ b/index.html
@@ -361,12 +361,16 @@
 
       <div class="chart-container">
         <div class="chart-title">📈 Weekly Progress Trend</div>
-        <canvas id="trendChart" height="300"></canvas>
+        <div style="position: relative; height: 300px;">
+          <canvas id="trendChart"></canvas>
+        </div>
       </div>
 
       <div class="chart-container">
         <div class="chart-title">📊 Daily Consistency Heatmap (Last 6 Weeks)</div>
-        <canvas id="heatmapChart" height="200"></canvas>
+        <div style="position: relative; height: 200px;">
+          <canvas id="heatmapChart"></canvas>
+        </div>
       </div>
 
       <div class="practices-grid" id="practicesGrid">
