--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
   /* ===========================
      CONFIG: add your CSV links
      =========================== */
-  const FACT_CSV_URL = "PASTE_fact_commitments_PUBLISHED_CSV_URL_HERE";
+  const FACT_CSV_URL = "https://docs.google.com/spreadsheets/d/e/2PACX-1vQERkbRqvUyktHeUw-DvLVNNIzvR50N0oHC-bpDwx6Lj33-o9uIiGN-ucd9r80Tq3l5_WroECTpI-gz/pub?gid=262595972&single=true&output=csv";
   const COMMENTS_CSV_URL = "PASTE_form_responses_PUBLISHED_CSV_URL_HERE";
 
   const TARGET = 0.95;
