--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     --bg:#f7f9fc; --card:#ffffff; --ink:#1f2937; --muted:#6b7280;
     --ok:#16a34a; --warn:#f59e0b; --bad:#ef4444; --shadow:0 8px 24px rgba(0,0,0,.06);
     --radius:16px;
+    --heat0:#eef2ff; --heat33:#c7d2fe; --heat66:#93c5fd; --heat100:#60a5fa;
   }
   *{box-sizing:border-box}
   body{margin:0;background:var(--bg);color:var(--ink);font-family:ui-sans-serif,system-ui,-apple-system,Segoe UI,Roboto,"Helvetica Neue",Arial}
@@ -32,13 +33,22 @@
   .bad{background:#fdeaea;color:#991b1b}
   .section h2{font-size:18px;margin:0 0 12px;color:#111827}
   canvas{width:100%;height:auto;max-height:420px}
-  .heat{display:grid;grid-template-columns:repeat(14,1fr);gap:3px}
-  .cell{height:18px;border-radius:4px;background:#e5e7eb}
-  .c0{background:#eef2ff}.c33{background:#c7d2fe}.c66{background:#93c5fd}.c100{background:#60a5fa}
-  .cloud{display:flex;flex-wrap:wrap;gap:10px}
-  .tag{border-radius:20px;padding:6px 10px;background:#eef2ff;color:#1e3a8a;font-weight:600}
-  .w1{font-size:12px}.w2{font-size:14px}.w3{font-size:16px}.w4{font-size:18px}.w5{font-size:22px}
-  .row{display:flex;gap:18px;align-items:center;justify-content:space-between}
+  /* Heatmap */
+  .heat{display:grid;grid-template-columns:repeat(14,1fr);gap:4px}
+  .cell{height:18px;border-radius:4px;background:var(--heat0)}
+  .c0{background:var(--heat0)} .c33{background:var(--heat33)}
+  .c66{background:var(--heat66)} .c100{background:var(--heat100)}
+  .legend{display:flex;align-items:center;gap:10px;margin-top:10px}
+  .swatch{width:24px;height:12px;border-radius:3px;border:1px solid #e5e7eb}
+  /* Word cloud */
+  .cloudWrap{position:relative; height:340px; background:#f8fafc; border-radius:12px; overflow:hidden; border:1px solid #e5e7eb}
+  .word{position:absolute; font-weight:800; line-height:1; white-space:nowrap; opacity:.92}
+  .w1{font-size:14px} .w2{font-size:18px}
+  .w3{font-size:22px} .w4{font-size:28px}
+  .w5{font-size:36px} .w6{font-size:48px}
+  .palette1{color:#2563eb} .palette2{color:#16a34a}
+  .palette3{color:#f59e0b} .palette4{color:#dc2626}
+  .palette5{color:#0ea5e9} .palette6{color:#9333ea}
 </style>
 </head>
 <body>
@@ -67,22 +77,26 @@
     <div class="card">
       <h2>Daily Consistency Heatmap (last 6 weeks)</h2>
       <div id="heat" class="heat"></div>
+      <div class="legend">
+        <span class="sub">Legend:</span>
+        <div class="swatch" style="background:var(--heat0)"></div><span class="sub">0 / 3</span>
+        <div class="swatch" style="background:var(--heat33)"></div><span class="sub">1 / 3</span>
+        <div class="swatch" style="background:var(--heat66)"></div><span class="sub">2 / 3</span>
+        <div class="swatch" style="background:var(--heat100)"></div><span class="sub">3 / 3</span>
+      </div>
       <div id="streaks" class="sub" style="margin-top:10px"></div>
     </div>
     <div class="card">
-      <div class="row"><h2>Reasons Mentioned (Word Cloud)</h2><span id="cloudHint" class="sub"></span></div>
-      <div id="cloud" class="cloud"></div>
-      <div style="margin-top:14px">
-        <h2 style="margin-bottom:8px">Weekly Commitments (latest week)</h2>
-        <canvas id="donut"></canvas>
-      </div>
+      <h2>Reasons Mentioned (Word Cloud)</h2>
+      <div id="cloud" class="cloudWrap"></div>
+      <div id="cloudHint" class="sub" style="margin-top:8px"></div>
     </div>
   </div>
 </div>
 
 <script>
   /* ======= CONFIG ======= */
-  const FACT_CSV_URL = "https://docs.google.com/spreadsheets/d/e/2PACX-1vQERkbRqvUyktHeUw-DvLVNNIzvR50N0oHC-bpDwx6Lj33-o9uIiGN-ucd9r80Tq3l5_WroECTpI-gz/pub?gid=262595972&single=true&output=csv"; // publish fact_commitments as CSV and paste link
+  const FACT_CSV_URL = "https://docs.google.com/spreadsheets/d/e/2PACX-1vQERkbRqvUyktHeUw-DvLVNNIzvR50N0oHC-bpDwx6Lj33-o9uIiGN-ucd9r80Tq3l5_WroECTpI-gz/pub?gid=262595972&single=true&output=csv";
   const TARGET = 0.95;
   const DAILY_PRACTICES = new Set(["Bible Reading","Morning Intimacy","Midnight Intercessory Prayer"]);
 
@@ -104,8 +118,6 @@
   function pd(s){ const d=new Date(s); return isNaN(d)?null:d; }
   function pct(x){ return (Math.round(x*1000)/10).toFixed(1)+"%"; }
   function fetchCSV(url){ return fetch(url+(url.includes("?")?"&":"?")+"cb="+Date.now()).then(r=>r.text()).then(csvToRows); }
-
-  // tolerant participant id getter
   function getRowPid(row){
     const cands = ["participant_id","Email Address","email address","Email","email"];
     for (const want of cands){
@@ -114,14 +126,12 @@
     }
     return "";
   }
-
   function longestStreak(vals){ let best=0,cur=0; for(const v of vals){ cur=v?cur+1:0; best=Math.max(best,cur); } return best; }
-
-  // find header key ignoring spaces/underscores & case
   function findKeyExactish(row, target){
     const want = target.replace(/[\s_]+/g,"").toLowerCase();
     return Object.keys(row).find(k => k.replace(/[\s_]+/g,"").toLowerCase() === want) || null;
   }
+  function rand(min,max){ return Math.random()*(max-min)+min; }
 
   (async function main(){
     if(!pid) return;
@@ -134,7 +144,7 @@
       return;
     }
 
-    // detect comment headers once from first row (robust to case/underscores)
+    // comment keys (robust)
     const sample = fact[0];
     const KEY_COMMENT_GENERAL = findKeyExactish(sample, "comment_general") || "comment_general";
     const KEY_COMMENT_OTHER   = findKeyExactish(sample, "comment_other")   || "comment_other";
@@ -178,14 +188,14 @@
     const attainment = possible ? (completed/possible) : 0;
     const weeksElapsed = Math.max(1, Math.ceil(dayNum/7));
     const expectedPossible = (dayNum*3) + (weeksElapsed*4);
-    const expectedCompletedFor95 = expectedPossible * TARGET;
+    const expectedCompletedFor95 = expectedPossible * 0.95;
     const variance = completed - expectedCompletedFor95;
 
-    // Projected finish & improvement
+    // Projections
     const totalPossible = (90*3) + (totalWeeksFinal*4);
     const projectedFinalCompleted = completed + attainment*(totalPossible - possible);
     const projectedFinalPct = projectedFinalCompleted / totalPossible;
-    const targetFinalCompleted = TARGET * totalPossible;
+    const targetFinalCompleted = 0.95 * totalPossible;
     const shortfall = Math.max(0, targetFinalCompleted - projectedFinalCompleted);
     const weeksLeft = Math.max(0, totalWeeksFinal - weeksElapsed);
     const neededPerWeek = weeksLeft ? (shortfall / weeksLeft) : shortfall;
@@ -197,14 +207,13 @@
       if (ratio < weakestPct){ weakest=k; weakestPct=ratio; }
     });
 
-    // Update KPI cards
+    // KPI cards
     const attnEl = document.getElementById("attainment");
     const flag = document.getElementById("attnFlag");
     attnEl.textContent = pct(attainment);
-    const cls = attainment>=TARGET ? "ok" : (attainment>=0.8 ? "warn" : "bad");
+    const cls = attainment>=0.95 ? "ok" : (attainment>=0.8 ? "warn" : "bad");
     flag.className = "pill " + cls;
-    flag.textContent = attainment>=TARGET ? "On pace for 95%+" : (attainment>=0.8 ? "Needs push" : "At risk");
-
+    flag.textContent = attainment>=0.95 ? "On pace for 95%+" : (attainment>=0.8 ? "Needs push" : "At risk");
     document.getElementById("ontrack").textContent = (variance>=0?"+":"")+Math.round(variance*10)/10;
     document.getElementById("days").textContent = `Day ${dayNum} / 90 — ${daysLeft} left`;
     document.getElementById("period").textContent = `Program started ${ymd(programStart)}`;
@@ -235,7 +244,7 @@
       (shortfall>0 ? `To hit 95%, aim for ~${Math.ceil(neededPerWeek)} more unit(s) per week for the remaining ${weeksLeft} week(s).`
                     : `You're on track for 95%+ 🎉`);
 
-    // Heatmap last 42 days
+    // Heatmap last 42 days + legend already in DOM
     const dKeys = Object.keys(byDayAgg).sort().slice(-42);
     const heat = document.getElementById("heat");
     dKeys.forEach(k=>{
@@ -253,31 +262,16 @@
     document.getElementById("streaks").textContent =
       `Longest full-day streak: ${longest} day(s) · Current full-day streak: ${current} day(s)`;
 
-    // Donut for latest week (weekly commitments only)
-    const latestWeek = wLabels[wLabels.length-1];
-    const weeklyRows = fact.filter(r => r.unit_type==="weekly" && r.week_start===latestWeek);
-    const counts = {full:0, partial:0, none:0};
-    weeklyRows.forEach(r=>{
-      const v=Number(r.value||0);
-      if (v>=0.99) counts.full++; else if (v>=0.49) counts.partial++; else counts.none++;
-    });
-    new Chart(document.getElementById("donut"), {
-      type:"doughnut",
-      data:{ labels:["Fully","Partially","Not"], datasets:[{ data:[counts.full, counts.partial, counts.none] }] },
-      options:{ responsive:true, plugins:{ legend:{position:"bottom"} } }
-    });
-
-    /* ===== WORD CLOUD from comment_general + comment_other (exact) ===== */
+    /* ===== Word Cloud from comment_general + comment_other ===== */
+    // Build frequency
     const STOP = new Set(("the a an and or to of in for with on at is are am be this that it as i we you they he she was were have has had from by not n/a na week weeks day days because due just really very i’m im ive i've").split(" "));
-    const cloudEl = document.getElementById("cloud");
     const freq = {};
     let samples = 0;
-
     fact.forEach(r=>{
-      const g = (r[KEY_COMMENT_GENERAL]||"").toLowerCase().trim();
-      const o = (r[KEY_COMMENT_OTHER]  ||"").toLowerCase().trim();
-      const text = (g + " " + o).trim();
-      if (!text || /^n\/?a$/.test(text)) return; // ignore empty/NA
+      const cg = (r[KEY_COMMENT_GENERAL]||"").toLowerCase().trim();
+      const co = (r[KEY_COMMENT_OTHER]  ||"").toLowerCase().trim();
+      const text = (cg + " " + co).trim();
+      if (!text || /^n\/?a$/.test(text)) return;
       samples++;
       text.replace(/[^a-z0-9\s]/g," ").split(/\s+/).forEach(w=>{
         if(!w || STOP.has(w)) return;
@@ -285,18 +279,38 @@
       });
     });
 
-    cloudEl.innerHTML = "";
-    const entries = Object.entries(freq).sort((a,b)=>b[1]-a[1]).slice(0,25);
+    const cloud = document.getElementById("cloud");
+    cloud.innerHTML = "";
+    if (!samples){
+      document.getElementById("cloudHint").textContent = "No comments yet";
+      return;
+    }
+    document.getElementById("cloudHint").textContent = `${samples} comment(s)`;
+
+    const entries = Object.entries(freq).sort((a,b)=>b[1]-a[1]).slice(0,40);
     const max = entries[0]?.[1] || 1;
-    entries.forEach(([w,c])=>{
+    const palettes = ["palette1","palette2","palette3","palette4","palette5","palette6"];
+
+    // Place words in the container randomly (simple packing)
+    const W = cloud.clientWidth, H = cloud.clientHeight;
+    entries.forEach(([w,c],i)=>{
       const weight = c/max;
-      const bucket = weight > .8 ? 5 : weight > .6 ? 4 : weight > .4 ? 3 : weight > .2 ? 2 : 1;
-      const span = document.createElement("span");
-      span.className = "tag w"+bucket;
-      span.textContent = `${w} (${c})`;
-      cloudEl.appendChild(span);
+      // 6 size buckets (bigger for frequent)
+      const bucket = weight>.9?6: weight>.75?5: weight>.6?4: weight>.45?3: weight>.3?2:1;
+      const span = document.createElement("div");
+      span.className = `word w${bucket} ${palettes[i%palettes.length]}`;
+      span.textContent = w;
+      // slight rotations (-15..15 deg) except the very largest to keep readable
+      const rot = bucket>=6 ? 0 : (Math.random()<0.5? -1:1) * Math.floor(rand(5,15));
+      span.style.transform = `rotate(${rot}deg)`;
+      // random position with padding
+      const pad = 18;
+      const left = Math.max(4, Math.min(W-120, rand(pad, W-pad-120)));
+      const top  = Math.max(4, Math.min(H-40, rand(pad, H-pad-40)));
+      span.style.left = left+"px";
+      span.style.top = top+"px";
+      cloud.appendChild(span);
     });
-    document.getElementById("cloudHint").textContent = samples ? `${samples} comment(s)` : "No comments yet";
   })();
 </script>
 </body>
