--- a/index.html
+++ b/index.html
@@ -21,11 +21,14 @@
   header h1{margin:0;font-size:clamp(20px,3vw,28px)}
   header .who{color:var(--muted);font-size:14px}
   .wrap{padding:0 24px 40px;max-width:1200px;margin:0 auto}
+
+  /* KPI grid auto-fit so we can add Strongest Area */
+  .kpis{display:grid;gap:18px;grid-template-columns:repeat(auto-fit,minmax(220px,1fr))}
   .grid{display:grid;gap:18px}
-  .kpis{grid-template-columns:repeat(4,minmax(0,1fr))}
   .mid{grid-template-columns:2fr 1.4fr}
   .bottom{grid-template-columns:1.6fr 1.4fr}
-  @media (max-width:980px){.kpis{grid-template-columns:repeat(2,minmax(0,1fr))}.mid,.bottom{grid-template-columns:1fr}}
+  @media (max-width:980px){.mid,.bottom{grid-template-columns:1fr}}
+
   .card{background:var(--card);border-radius:var(--radius);box-shadow:var(--shadow);padding:16px}
   .card h3{margin:0 0 8px;font-size:16px;color:var(--muted);font-weight:600;letter-spacing:.2px}
   .big{font-size:clamp(22px,4vw,30px);margin:6px 0 4px;font-weight:800}
@@ -37,16 +40,19 @@
   .section h2{font-size:18px;margin:0 0 12px;color:#111827}
   canvas{width:100%;height:auto;max-height:420px}
 
-  /* Heatmap with three mini-bars per day */
+  /* Heatmap with three mini-bars per day with visible labels */
   .heat{display:grid;grid-template-columns:repeat(14,1fr);gap:6px}
   .day{height:20px;background:#f3f4f6;border-radius:6px;padding:3px;display:grid;grid-template-columns:repeat(3,1fr);gap:3px;border:1px solid #eef2f7}
-  .bar{height:100%;border-radius:4px;background:var(--empty)}
-  .bar.read{background:var(--read)}
-  .bar.intimacy{background:var(--intimacy)}
-  .bar.memory{background:var(--memory)}
+  .bar{position:relative;height:100%;border-radius:4px;background:var(--empty);display:flex;align-items:center;justify-content:center}
+  .bar .lbl{font-size:10px;font-weight:800;color:#9ca3af;line-height:1}
+  .bar.on .lbl{color:#ffffff}
+  .bar.read.on{background:var(--read)}
+  .bar.intimacy.on{background:var(--intimacy)}
+  .bar.memory.on{background:var(--memory)}
   .legend{display:flex;align-items:center;gap:12px;margin-top:10px;flex-wrap:wrap}
   .chip{display:flex;align-items:center;gap:6px}
   .sw{width:20px;height:12px;border-radius:3px}
+
   /* Word cloud */
   .cloudWrap{position:relative; height:340px; background:#f8fafc; border-radius:12px; overflow:hidden; border:1px solid #e5e7eb}
   .word{position:absolute; font-weight:800; line-height:1; white-space:nowrap; opacity:.92}
@@ -66,27 +72,36 @@
 
 <div class="wrap">
   <!-- KPI CARDS -->
-  <div class="grid kpis">
+  <div class="kpis">
     <div class="card">
       <h3>Overall Attainment</h3>
       <div id="attainment" class="big">—</div>
       <div id="attnFlag" class="pill">—</div>
-      <div class="sub">Your completed units / all units so far. Target ≥ 95% to succeed after 90 days.</div>
+      <div class="sub">Completed so far ÷ possible so far. Target ≥ 95% to succeed by Day 90.</div>
     </div>
+
     <div class="card">
       <h3>On-Track vs Expected</h3>
       <div id="ontrack" class="big">—</div>
-      <div id="ontrackHelp" class="sub">Ahead/behind the pace needed to finish at 95%, based on how many units should be done by today.</div>
+      <div id="ontrackHelp" class="sub">Ahead/behind the 95% pace based on how many units should be done by today.</div>
     </div>
+
     <div class="card">
       <h3>Days Passed / Left</h3>
       <div id="days" class="big">—</div>
       <div id="period" class="sub"></div>
     </div>
+
     <div class="card">
       <h3>Weakest Area</h3>
       <div id="weak" class="big">—</div>
-      <div class="sub">Focus here this week</div>
+      <div class="sub">Per-practice attainment (completed ÷ possible) so far.</div>
+    </div>
+
+    <div class="card">
+      <h3>Strongest Area</h3>
+      <div id="strong" class="big">—</div>
+      <div class="sub">Per-practice attainment (completed ÷ possible) so far.</div>
     </div>
   </div>
 
@@ -120,13 +135,14 @@
   const FACT_CSV_URL =
     "https://docs.google.com/spreadsheets/d/e/2PACX-1vQERkbRqvUyktHeUw-DvLVNNIzvR50N0oHC-bpDwx6Lj33-o9uIiGN-ucd9r80Tq3l5_WroECTpI-gz/pub?gid=262595972&single=true&output=csv";
   const TARGET = 0.95;
-  // Daily set after your swap: Reading, Intimacy, Memorization
+  // Daily set per your spec: Reading, Intimacy, Memorization
   const DAILY_PRACTICES = new Set(["Bible Reading","Morning Intimacy","Scripture Memorization"]);
   const DAILY_COLORS = {
     "Bible Reading":"read",
     "Morning Intimacy":"intimacy",
     "Scripture Memorization":"memory"
   };
+  const LETTER = {"Bible Reading":"R","Morning Intimacy":"I","Scripture Memorization":"M"};
 
   /* ======= HELPERS ======= */
   const pid = (new URLSearchParams(location.search).get("id") || "").trim().toLowerCase();
@@ -187,8 +203,7 @@
     // Aggregations
     let completed=0, possible=0;
     const byPractice={}, byWeek={};
-    // For per-day mini-bars
-    const dayMap = {}; // date -> { "Bible Reading":0/1, "Morning Intimacy":0/1, "Scripture Memorization":0/1 }
+    const dayMap = {}; // date -> { three dailies }
     const comments = [];
 
     fact.forEach(r=>{
@@ -219,7 +234,7 @@
     const attainment = possible ? (completed/possible) : 0;
     const weeksElapsed = Math.max(1, Math.ceil(dayNum/7));
     // Expected count to be on pace for 95% *by today*
-    const expectedPossible = (dayNum*3) + (weeksElapsed*4);           // three dailies per day + four weekly per week
+    const expectedPossible = (dayNum*3) + (weeksElapsed*4);  // 3 daily + 4 weekly categories
     const expectedCompletedFor95 = expectedPossible * 0.95;
     const variance = Math.round((completed - expectedCompletedFor95)*10)/10;
 
@@ -232,14 +247,15 @@
     const weeksLeft = Math.max(0, totalWeeksFinal - weeksElapsed);
     const neededPerWeek = weeksLeft ? (shortfall / weeksLeft) : shortfall;
 
-    // Weakest area
-    let weakest=null, weakestPct=1;
+    // Weakest & Strongest areas (per-practice attainment)
+    let weakest=null, weakestPct=1, strongest=null, strongestPct=-1;
     Object.keys(byPractice).forEach(k=>{
       const p = byPractice[k]; const ratio = p.total ? p.done/p.total : 0;
       if (ratio < weakestPct){ weakest=k; weakestPct=ratio; }
+      if (ratio > strongestPct){ strongest=k; strongestPct=ratio; }
     });
 
-    // KPI cards
+    // KPI cards fill
     document.getElementById("attainment").textContent = pct(attainment);
     const flag = document.getElementById("attnFlag");
     flag.className = "pill " + (attainment>=0.95 ? "ok" : attainment>=0.8 ? "warn" : "bad");
@@ -247,13 +263,13 @@
 
     document.getElementById("ontrack").textContent = (variance>=0?"+":"")+variance;
     document.getElementById("ontrackHelp").textContent =
-      `By day ${dayNum}, you’d need ~${Math.round(expectedCompletedFor95)} completed units to be on 95% pace. You’ve completed ${Math.round(completed)} so far, so you’re ${variance>=0?Math.abs(variance)+" ahead":"about "+Math.abs(variance)+" behind"}.`;
+      `By day ${dayNum}, ~${Math.round(expectedCompletedFor95)} completed units is 95% pace. You’ve completed ${Math.round(completed)}, so you’re ${variance>=0?Math.abs(variance)+" ahead":Math.abs(variance)+" behind"}.`;
 
     document.getElementById("days").textContent = `Day ${dayNum} / 90 — ${daysLeft} left`;
     document.getElementById("period").textContent = `Program started ${ymd(programStart)}`;
     document.getElementById("weak").textContent = weakest ? `${weakest} (${pct(weakestPct)})` : "—";
+    document.getElementById("strong").textContent = strongest ? `${strongest} (${pct(strongestPct)})` : "—";
 
-    // Charts
     // Weekly line
     const wLabels = Object.keys(byWeek).sort();
     const wPct = wLabels.map(w => {
@@ -278,18 +294,27 @@
       (shortfall>0 ? `To hit 95%, aim for ~${Math.ceil(neededPerWeek)} extra unit(s) per week for the remaining ${weeksLeft} week(s).`
                     : `You're on track for 95%+ 🎉`);
 
-    // Heatmap: render last 42 days using three mini-bars per day
+    // Heatmap: last 42 days, three mini-bars per day WITH LETTERS
     const allDates = Object.keys(dayMap).sort().slice(-42);
     const heat = document.getElementById("heat");
     allDates.forEach(d=>{
       const day = document.createElement("div");
       day.className = "day";
       const vals = dayMap[d] || {"Bible Reading":0,"Morning Intimacy":0,"Scripture Memorization":0};
+
       ["Bible Reading","Morning Intimacy","Scripture Memorization"].forEach(pr=>{
+        const done = Number(vals[pr]) >= 1;
         const b = document.createElement("div");
-        b.className = "bar " + (vals[pr] ? DAILY_COLORS[pr] : "");
+        b.className = "bar " + (done ? DAILY_COLORS[pr] + " on" : "");
+        if (!done) b.className += " " + DAILY_COLORS[pr]; // keep color outline when off
+        b.classList.add(DAILY_COLORS[pr]);
+        const lbl = document.createElement("span");
+        lbl.className = "lbl";
+        lbl.textContent = LETTER[pr];
+        b.appendChild(lbl);
         day.appendChild(b);
       });
+
       day.title = `${d}\nReading: ${vals["Bible Reading"]? "✓":"–"} • Intimacy: ${vals["Morning Intimacy"]? "✓":"–"} • Memorization: ${vals["Scripture Memorization"]? "✓":"–"}`;
       heat.appendChild(day);
     });
@@ -299,8 +324,8 @@
     const freq = {};
     let samples = 0;
     fact.forEach(r=>{
-      const cg = (r[KEY_COMMENT_GENERAL]||"").toLowerCase().trim();
-      const co = (r[KEY_COMMENT_OTHER]  ||"").toLowerCase().trim();
+      const cg = (r[findKeyExactish(r,"comment_general")||"comment_general"]||"").toLowerCase().trim();
+      const co = (r[findKeyExactish(r,"comment_other")  ||"comment_other"]  ||"").toLowerCase().trim();
       const text = (cg + " " + co).trim();
       if (!text || /^n\/?a$/.test(text)) return;
       samples++;
