--- a/index.html
+++ b/index.html
@@ -39,16 +39,16 @@
   .section h2{font-size:18px;margin:0 0 12px;color:#111827}
   canvas{width:100%;height:auto;max-height:420px}
 
-  /* === Enlarged Heatmap (6 rows × 7 cols) === */
-  .heatWrap{display:flex;flex-direction:column;gap:12px;height:100%}
-  .wkHeader{display:grid;grid-template-columns:repeat(7,1fr);gap:12px}
+  /* === Heatmap === */
+  .heatWrap{display:flex;flex-direction:column;gap:8px}
+  .wkHeader{display:grid;grid-template-columns:repeat(7,1fr);gap:6px}
   .wkHeader span{font-size:12px;color:var(--muted);text-align:center;font-weight:600}
-  .heat{display:grid;grid-template-rows:repeat(6,1fr);gap:12px;flex:1}
-  .row{display:grid;grid-template-columns:repeat(7,1fr);gap:12px}
+  .heat{display:grid;grid-template-rows:repeat(6,1fr);gap:6px}
+  .row{display:grid;grid-template-columns:repeat(7,1fr);gap:6px}
   .cell{
-    width:100%;aspect-ratio:1/1;
-    background:#f3f4f6;border-radius:8px;padding:4px;
-    display:grid;grid-template-rows:repeat(3,1fr);gap:3px;
+    width:34px;height:34px;
+    background:#f3f4f6;border-radius:6px;padding:3px;
+    display:grid;grid-template-rows:repeat(3,1fr);gap:2px;
     border:1px solid #e5e7eb;
   }
   .seg{border-radius:3px;background:var(--empty)}
@@ -135,7 +135,6 @@
   function sod(d){const x=new Date(d);x.setHours(0,0,0,0);return x;}
   function ymd(d){return d.toISOString().slice(0,10);}
   function getRowPid(r){const c=["participant_id","email address","Email Address","Email"];for(const k of c){if(r[k])return r[k].toLowerCase()}return"";}
-  function findKeyExactish(r,t){const want=t.replace(/[\s_]+/g,"").toLowerCase();return Object.keys(r).find(k=>k.replace(/[\s_]+/g,"").toLowerCase()===want)||null;}
   function fetchCSV(url){return fetch(url).then(r=>r.text()).then(csvToRows);}
 
   (async function main(){
