--- a/index.html
+++ b/index.html
@@ -39,19 +39,19 @@
   .section h2{font-size:18px;margin:0 0 12px;color:#111827}
   canvas{width:100%;height:auto;max-height:420px}
 
-  /* === Heatmap === */
+  /* === Heatmap (compact style) === */
   .heatWrap{display:flex;flex-direction:column;gap:8px}
-  .wkHeader{display:grid;grid-template-columns:repeat(7,1fr);gap:6px}
-  .wkHeader span{font-size:12px;color:var(--muted);text-align:center;font-weight:600}
-  .heat{display:grid;grid-template-rows:repeat(6,1fr);gap:6px}
-  .row{display:grid;grid-template-columns:repeat(7,1fr);gap:6px}
+  .wkHeader{display:grid;grid-template-columns:repeat(7,1fr);gap:4px}
+  .wkHeader span{font-size:11px;color:var(--muted);text-align:center;font-weight:600}
+  .heat{display:grid;grid-template-rows:repeat(6,1fr);gap:4px}
+  .row{display:grid;grid-template-columns:repeat(7,1fr);gap:4px}
   .cell{
-    width:34px;height:34px;
-    background:#f3f4f6;border-radius:6px;padding:3px;
-    display:grid;grid-template-rows:repeat(3,1fr);gap:2px;
+    width:22px;height:22px;
+    background:#f3f4f6;border-radius:5px;padding:2px;
+    display:grid;grid-template-rows:repeat(3,1fr);gap:1px;
     border:1px solid #e5e7eb;
   }
-  .seg{border-radius:3px;background:var(--empty)}
+  .seg{border-radius:2px;background:var(--empty)}
   .seg.read.on{background:var(--read)}
   .seg.intimacy.on{background:var(--intimacy)}
   .seg.memory.on{background:var(--memory)}
