--- a/index.html
+++ b/index.html
@@ -1,192 +1,63 @@
-<!doctype html>
-<html lang="en">
-<head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Discipleship 90-Day Dashboard</title>
-<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-<style>
-  :root{
-    --bg:#f7f9fc; --card:#ffffff; --ink:#1f2937; --muted:#6b7280;
-    --ok:#16a34a; --warn:#f59e0b; --bad:#ef4444; --shadow:0 8px 24px rgba(0,0,0,.06);
-    --radius:16px;
-    --read:#3b82f6;     /* Bible Reading */
-    --intimacy:#06b6d4; /* Morning Intimacy */
-    --memory:#7c3aed;   /* Scripture Memorization */
-    --empty:#e5e7eb;
-  }
-  *{box-sizing:border-box}
-  body{margin:0;background:var(--bg);color:var(--ink);font-family:ui-sans-serif,system-ui,-apple-system,Segoe UI,Roboto,"Helvetica Neue",Arial}
-  header{padding:20px 24px 8px;display:flex;justify-content:space-between;align-items:center}
-  header h1{margin:0;font-size:clamp(20px,3vw,28px)}
-  header .who{color:var(--muted);font-size:14px}
-  .wrap{padding:0 24px 40px;max-width:1200px;margin:0 auto}
-
-  .kpis{display:grid;gap:18px;grid-template-columns:repeat(auto-fit,minmax(220px,1fr))}
-  .grid{display:grid;gap:18px}
-  .mid{grid-template-columns:2fr 1.4fr}
-  .bottom{grid-template-columns:1.6fr 1.4fr}
-  @media (max-width:980px){.mid,.bottom{grid-template-columns:1fr}}
-
-  .card{background:var(--card);border-radius:var(--radius);box-shadow:var(--shadow);padding:16px}
-  .card h3{margin:0 0 8px;font-size:16px;color:var(--muted);font-weight:600;letter-spacing:.2px}
-  .big{font-size:clamp(22px,4vw,30px);margin:6px 0 4px;font-weight:800}
-  .sub{font-size:12px;color:var(--muted)}
-  .pill{display:inline-block;padding:4px 10px;border-radius:999px;border:1px solid #e5e7eb;font-size:12px;font-weight:600;margin-top:6px}
-  .ok{background:#e8f8ee;color:#065f46}
-  .warn{background:#fff7e6;color:#92400e}
-  .bad{background:#fdeaea;color:#991b1b}
-  .section h2{font-size:18px;margin:0 0 12px;color:#111827}
-  canvas{width:100%;height:auto;max-height:420px}
-
-  /* === Heatmap (compact style) === */
-  .heatWrap{display:flex;flex-direction:column;gap:8px}
-  .wkHeader{display:grid;grid-template-columns:repeat(7,1fr);gap:4px}
-  .wkHeader span{font-size:11px;color:var(--muted);text-align:center;font-weight:600}
-  .heat{display:grid;grid-template-rows:repeat(6,1fr);gap:4px}
-  .row{display:grid;grid-template-columns:repeat(7,1fr);gap:4px}
-  .cell{
-    width:22px;height:22px;
-    background:#f3f4f6;border-radius:5px;padding:2px;
-    display:grid;grid-template-rows:repeat(3,1fr);gap:1px;
-    border:1px solid #e5e7eb;
-  }
-  .seg{border-radius:2px;background:var(--empty)}
-  .seg.read.on{background:var(--read)}
-  .seg.intimacy.on{background:var(--intimacy)}
-  .seg.memory.on{background:var(--memory)}
-
-  .legend{display:flex;align-items:center;gap:12px;margin-top:10px;flex-wrap:wrap}
-  .chip{display:flex;align-items:center;gap:6px}
-  .sw{width:20px;height:12px;border-radius:3px}
-
-  /* Word cloud */
-  .cloudWrap{position:relative; height:340px; background:#f8fafc; border-radius:12px; overflow:hidden; border:1px solid #e5e7eb}
-  .word{position:absolute; font-weight:800; line-height:1; white-space:nowrap; opacity:.92}
-  .w1{font-size:14px} .w2{font-size:18px}
-  .w3{font-size:22px} .w4{font-size:28px}
-  .w5{font-size:36px} .w6{font-size:48px}
-  .palette1{color:#2563eb} .palette2{color:#16a34a}
-  .palette3{color:#f59e0b} .palette4{color:#dc2626}
-  .palette5{color:#0ea5e9} .palette6{color:#9333ea}
-</style>
-</head>
-<body>
-<header>
-  <h1>Discipleship 90-Day Dashboard</h1>
-  <div class="who">Participant: <span id="who">—</span></div>
-</header>
-
-<div class="wrap">
-  <!-- KPI CARDS -->
-  <div class="kpis">
-    <div class="card"><h3>Overall Attainment</h3><div id="attainment" class="big">—</div><div id="attnFlag" class="pill">—</div><div class="sub">Completed ÷ possible so far (target ≥95%).</div></div>
-    <div class="card"><h3>On-Track vs Expected</h3><div id="ontrack" class="big">—</div><div id="ontrackHelp" class="sub"></div></div>
-    <div class="card"><h3>Days Passed / Left</h3><div id="days" class="big">—</div><div id="period" class="sub"></div></div>
-    <div class="card"><h3>Weakest Area</h3><div id="weak" class="big">—</div><div class="sub">Lowest per-practice attainment</div></div>
-    <div class="card"><h3>Strongest Area</h3><div id="strong" class="big">—</div><div class="sub">Highest per-practice attainment</div></div>
-  </div>
-
-  <!-- MID -->
-  <div class="grid mid section" style="margin-top:18px;">
-    <div class="card"><h2>Weekly Attainment Trend</h2><canvas id="trend"></canvas></div>
-    <div class="card"><h2>Practice Balance (Radar)</h2><canvas id="radar"></canvas><div id="projection" class="sub" style="margin-top:8px"></div></div>
-  </div>
-
-  <!-- BOTTOM -->
-  <div class="grid bottom section" style="margin-top:18px;">
-    <div class="card">
-      <h2>Daily Consistency Heatmap (last 6 weeks)</h2>
-      <div class="heatWrap">
-        <div class="wkHeader" id="wkHeader"></div>
-        <div class="heat" id="heat"></div>
-      </div>
-      <div class="legend">
-        <div class="chip"><div class="sw" style="background:var(--read)"></div><span class="sub">Bible Reading</span></div>
-        <div class="chip"><div class="sw" style="background:var(--intimacy)"></div><span class="sub">Morning Intimacy</span></div>
-        <div class="chip"><div class="sw" style="background:var(--memory)"></div><span class="sub">Scripture Memorization</span></div>
-      </div>
-    </div>
-
-    <div class="card">
-      <h2>Reasons Mentioned (Word Cloud)</h2>
-      <div id="cloud" class="cloudWrap"></div>
-      <div id="cloudHint" class="sub" style="margin-top:8px"></div>
-    </div>
-  </div>
-</div>
-
 <script>
-  const FACT_CSV_URL="https://docs.google.com/spreadsheets/d/e/2PACX-1vQERkbRqvUyktHeUw-DvLVNNIzvR50N0oHC-bpDwx6Lj33-o9uIiGN-ucd9r80Tq3l5_WroECTpI-gz/pub?gid=262595972&single=true&output=csv";
-  const TARGET=0.95;
-  const DAILY_KEYS=["Bible Reading","Morning Intimacy","Scripture Memorization"];
-  const WEEKDAYS=["S","M","T","W","T","F","S"];
-
-  function csvToRows(text){
-    const lines=text.trim().split(/\r?\n/);
-    const header=lines.shift().split(",");
-    return lines.map(line=>{
-      const cols=line.split(/,(?=(?:[^"]*"[^"]*")*[^"]*$)/).map(s=>s.replace(/^"|"$/g,""));
-      const o={}; header.forEach((h,i)=>o[h.trim()]=(cols[i]||"").trim()); return o;
-    });
-  }
-  function pct(x){return (Math.round(x*1000)/10).toFixed(1)+"%";}
-  function pd(s){const d=new Date(s);return isNaN(d)?null:d;}
-  function sod(d){const x=new Date(d);x.setHours(0,0,0,0);return x;}
-  function ymd(d){return d.toISOString().slice(0,10);}
-  function getRowPid(r){const c=["participant_id","email address","Email Address","Email"];for(const k of c){if(r[k])return r[k].toLowerCase()}return"";}
-  function fetchCSV(url){return fetch(url).then(r=>r.text()).then(csvToRows);}
+  // ... keep everything above this as-is
 
   (async function main(){
-    const pid=(new URLSearchParams(location.search).get("id")||"").toLowerCase();
-    document.getElementById("who").textContent=pid||"(add ?id=email)";
-    if(!pid)return;
+    // ... keep all existing code up to where the heatmap is rendered
 
-    const factAll=await fetchCSV(FACT_CSV_URL);
-    const fact=factAll.filter(r=>getRowPid(r)===pid);
-    if(!fact.length){document.body.insertAdjacentHTML("beforeend","<div class='wrap'><p>No data for this participant.</p></div>");return;}
-
-    const weekStarts=fact.map(r=>pd(r.week_start)).filter(Boolean).sort((a,b)=>a-b);
-    const programStart=sod(weekStarts[0]); const today=sod(new Date());
-    const dayNum=Math.max(1,Math.min(90,Math.floor((today-programStart)/(1000*60*60*24))+1));
-    const daysLeft=Math.max(0,90-dayNum);
-
-    let completed=0,possible=0; const byPractice={},byWeek={},dayMap={};
-    fact.forEach(r=>{
-      const v=+r.value||0; completed+=v; possible++;
-      const p=r.practice; byPractice[p]=byPractice[p]||{done:0,total:0}; byPractice[p].done+=v; byPractice[p].total++;
-      const wk=r.week_start; byWeek[wk]=byWeek[wk]||{done:0,total:0}; byWeek[wk].done+=v; byWeek[wk].total++;
-      if(DAILY_KEYS.includes(p)){const d=r.date;if(!dayMap[d])dayMap[d]={"Bible Reading":0,"Morning Intimacy":0,"Scripture Memorization":0}; dayMap[d][p]=Math.min(1,v);}
+    const hdr = document.getElementById("wkHeader");
+    WEEKDAYS.forEach(ch => {
+      const s = document.createElement("span");
+      s.textContent = ch;
+      hdr.appendChild(s);
     });
 
-    const attainment=possible?(completed/possible):0;
-    const weeksElapsed=Math.max(1,Math.ceil(dayNum/7));
-    const expectedPossible=(dayNum*3)+(weeksElapsed*4);
-    const expectedCompletedFor95=expectedPossible*0.95;
-    const variance=Math.round((completed-expectedCompletedFor95)*10)/10;
-    let weak=null,weakPct=1,strong=null,strongPct=-1;
-    Object.keys(byPractice).forEach(k=>{const p=byPractice[k];const ratio=p.done/p.total;if(ratio<weakPct){weak=k;weakPct=ratio}if(ratio>strongPct){strong=k;strongPct=ratio}});
-    document.getElementById("attainment").textContent=pct(attainment);
-    const flag=document.getElementById("attnFlag");flag.className="pill "+(attainment>=0.95?"ok":attainment>=0.8?"warn":"bad");flag.textContent=attainment>=0.95?"On track":"At risk";
-    document.getElementById("ontrack").textContent=(variance>=0?"+":"")+variance;
-    document.getElementById("ontrackHelp").textContent=`By day ${dayNum}, ~${Math.round(expectedCompletedFor95)} completions = 95% pace. You’ve done ${Math.round(completed)}.`;
-    document.getElementById("days").textContent=`Day ${dayNum}/90 — ${daysLeft} left`;
-    document.getElementById("period").textContent=`Program started ${ymd(programStart)}`;
-    document.getElementById("weak").textContent=weak?`${weak} (${pct(weakPct)})`:"—";
-    document.getElementById("strong").textContent=strong?`${strong} (${pct(strongPct)})`:"—";
+    const heat = document.getElementById("heat");
+    const datesSorted = Object.keys(dayMap).sort();
+    const last42 = datesSorted.slice(-42);
+    while (last42.length < 42) last42.unshift(null);
 
-    const wLabels=Object.keys(byWeek).sort();
-    const wPct=wLabels.map(w=>byWeek[w].done/byWeek[w].total*100);
-    new Chart(document.getElementById("trend"),{type:"line",data:{labels:wLabels,datasets:[{label:"Weekly %",data:wPct,borderWidth:3,tension:.25}]},options:{scales:{y:{suggestedMin:0,suggestedMax:100}}}});
-    const pLabels=Object.keys(byPractice);
-    const pPct=pLabels.map(k=>byPractice[k].done/byPractice[k].total*100);
-    new Chart(document.getElementById("radar"),{type:"radar",data:{labels:pLabels,datasets:[{label:"% Attainment",data:pPct}]},options:{scales:{r:{suggestedMin:0,suggestedMax:100}}}});
+    // === Heatmap with hover titles ===
+    for (let r = 0; r < 6; r++) {
+      const row = document.createElement("div");
+      row.className = "row";
 
-    const hdr=document.getElementById("wkHeader");WEEKDAYS.forEach(ch=>{const s=document.createElement("span");s.textContent=ch;hdr.appendChild(s)});
-    const heat=document.getElementById("heat");
-    const datesSorted=Object.keys(dayMap).sort();const last42=datesSorted.slice(-42);while(last42.length<42)last42.unshift(null);
-    for(let r=0;r<6;r++){const row=document.createElement("div");row.className="row";for(let c=0;c<7;c++){const idx=r*7+c;const d=last42[idx];const cell=document.createElement("div");cell.className="cell";DAILY_KEYS.forEach(k=>{const seg=document.createElement("div");seg.className="seg "+(k==="Bible Reading"?"read":k==="Morning Intimacy"?"intimacy":"memory");if(d&&dayMap[d]&&dayMap[d][k]>=1)seg.classList.add("on");cell.appendChild(seg)});if(!d)cell.style.opacity=.35;row.appendChild(cell)}heat.appendChild(row)}}
-  )();
+      for (let c = 0; c < 7; c++) {
+        const idx = r * 7 + c;
+        const d = last42[idx];
+
+        const cell = document.createElement("div");
+        cell.className = "cell";
+
+        // Figure out completion flags for tooltip
+        const doneR = d && dayMap[d] ? Number(dayMap[d]["Bible Reading"]) >= 1 : false;
+        const doneI = d && dayMap[d] ? Number(dayMap[d]["Morning Intimacy"]) >= 1 : false;
+        const doneM = d && dayMap[d] ? Number(dayMap[d]["Scripture Memorization"]) >= 1 : false;
+
+        // Add the three stacked segments (R/I/M)
+        ["Bible Reading", "Morning Intimacy", "Scripture Memorization"].forEach(k => {
+          const seg = document.createElement("div");
+          seg.className =
+            "seg " +
+            (k === "Bible Reading" ? "read" : k === "Morning Intimacy" ? "intimacy" : "memory");
+          if (d && dayMap[d] && Number(dayMap[d][k]) >= 1) seg.classList.add("on");
+          cell.appendChild(seg);
+        });
+
+        // Native browser tooltip: date + checks
+        if (d) {
+          cell.title =
+            `${d}\n` +
+            `Reading: ${doneR ? "✓" : "—"}  •  ` +
+            `Intimacy: ${doneI ? "✓" : "—"}  •  ` +
+            `Memorization: ${doneM ? "✓" : "—"}`;
+        } else {
+          cell.style.opacity = 0.35;
+          cell.title = "No data";
+        }
+
+        row.appendChild(cell);
+      }
+      heat.appendChild(row);
+    }
+  })();
 </script>
-</body>
-</html>
